# hello-python

./: .gitignore  README.md  pyproject.toml
.hello-python/: pyvenv.cfg
hello-poetry/: pyproject.toml
hello-poetry/hello_poetry/: __init__.py  main.py
hello-python/: pyproject.toml
hello-web/: pyproject.toml
hello-web/hello_web/: main.py
hello-web/tests/: test_main.py
introducing-python/: requirements.txt
introducing-python/chapter06/: chapter06.ipynb  chapter07.ipynb
introducing-python/chapter07/: chapter07.ipynb
introducing-python/chapter08/: chapter08.ipynb
introducing-python/chapter10/: chapter10.ipynb
introducing-python/chpater09/: chapter09.ipynb
introducing-python/chpater11/: chapter11.ipynb  week.py
introducing-python/chpater11/chapter11_1/: month.py
