[tool.poetry]
name = "hello-poetry"
version = "0.1.0"
description = ""
authors = ["shinyay <shinya.com@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
my-script = "hello_poetry:main"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
