[tool.poetry]
name = "hello-python"
version = "0.1.0"
description = ""
authors = ["shinyay <shinya.com@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pysen = "^0.10.5"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
mypy = "^1.7.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
